--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -7,136 +7,101 @@
     android:background="@drawable/bg"
     tools:context=".PlayVideoActivity">
 
+    <include
+        android:id="@+id/appBar"
+        layout="@layout/toolbar" />
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_marginTop="50dp">
 
-        <include
-            android:id="@+id/appBar"
-            layout="@layout/toolbar" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ScrollView
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/scroll_left"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="65dp"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="match_parent">
 
+                <VideoView
+                    android:id="@+id/video_view_selected"
+                    android:layout_width="700dp"
+                    android:layout_height="350dp"
+                    android:layout_margin="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
                 <LinearLayout
+                    android:id="@+id/video_control"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/video_view_selected"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/video_view_selected">
 
-                    <android.support.constraint.ConstraintLayout
-                        android:id="@+id/container_video"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/bt_play_selected"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginTop="92dp"
+                    android:clickable="true"
+                    android:src="@android:drawable/ic_media_play"
+                    app:backgroundTint="@color/color12"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                        <VideoView
-                            android:id="@+id/video_view_selected"
-                            android:layout_width="700dp"
-                            android:layout_height="350dp"
-                            android:layout_margin="8dp"
-                            android:layout_marginStart="8dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/bt_replay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginTop="16dp"
+                    android:clickable="true"
+                    android:longClickable="false"
+                    app:backgroundTint="@color/color2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bt_play_selected"
+                    app:srcCompat="@drawable/replay_black" />
 
-                        <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/bt_play_selected"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="40dp"
-                            android:layout_marginRight="40dp"
-                            android:layout_marginTop="92dp"
-                            android:clickable="true"
-                            android:src="@android:drawable/ic_media_play"
-                            app:backgroundTint="@color/color12"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/bt_replay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="40dp"
-                            android:layout_marginRight="40dp"
-                            android:layout_marginTop="16dp"
-                            android:clickable="true"
-                            android:longClickable="false"
-                            app:backgroundTint="@color/color2"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/bt_play_selected"
-                            app:srcCompat="@drawable/replay_black" />
-
-                        <Chronometer
-                            android:id="@+id/chronometer_play"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="40dp"
-                            android:layout_marginRight="40dp"
-                            android:layout_marginTop="21dp"
-                            android:background="@color/colorCharcoal"
-                            android:padding="10dp"
-                            android:textColor="@color/color9"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/bt_replay" />
-
-
-                    </android.support.constraint.ConstraintLayout>
-
-
+                <Chronometer
+                    android:id="@+id/chronometer_play"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginTop="21dp"
+                    android:background="@color/colorCharcoal"
+                    android:padding="10dp"
+                    android:textColor="@color/color9"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bt_replay" />
                 </LinearLayout>
 
                 <ScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:id="@+id/linear_re_tags"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/re_tags_selected"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:padding="8dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </LinearLayout>
-                </ScrollView>
-
-            </LinearLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/constraintLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/container_video"
-                app:layout_constraintVertical_bias="0.0">
-
-                <ScrollView
-                    android:id="@+id/scroll_timeline"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/video_view_selected">
 
                     <RelativeLayout
                         android:id="@+id/time_lines_container"
@@ -145,13 +110,9 @@
 
                         <LinearLayout
                             android:id="@+id/ll_main_playvideo"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:orientation="vertical" />
 
                         <SeekBar
                             android:id="@+id/seek_bar_selected"
@@ -167,10 +128,10 @@
                             android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.085"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
+                            android:thumbOffset="15dp"
+                             />
 
                     </RelativeLayout>
                 </ScrollView>
@@ -178,7 +139,34 @@
 
             </android.support.constraint.ConstraintLayout>
 
-        </LinearLayout>
+
+        </ScrollView>
+
+        <ScrollView
+            android:id="@+id/scroll_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/linear_re_tags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/re_tags_selected"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:padding="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
+        </ScrollView>
 
     </android.support.constraint.ConstraintLayout>
 
