--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -1,39 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    tools:layout_editor_absoluteY="25dp">
+    tools:layout_editor_absoluteY="25dp"
+    android:orientation="horizontal"
+    android:background="@drawable/tag"
+    android:id="@+id/view_foreground">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/view_foreground"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/tag">
 
         <ImageView
             android:id="@+id/iv_color"
             android:layout_width="10dp"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
+            android:layout_height="match_parent"
             android:background="@android:color/holo_blue_light"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+             />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent">
+            >
 
             <TextView
                 android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
@@ -43,16 +40,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:maxLength="30"
-                android:text="@string/name_observation"
+                tools:text="@string/name_observation"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:fontFamily="@font/roboto"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tv_stats"
-                app:layout_constraintHorizontal_bias="0.037"
-                app:layout_constraintStart_toEndOf="@+id/iv_color"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:singleLine="false"
+               />
 
             <TextView
                 android:id="@+id/tv_stats"
@@ -64,17 +57,10 @@
                 android:layout_marginTop="8dp"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/white"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:fontFamily="@font/roboto"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
+                tools:text="4"
                 tools:visibility="visible" />
         </LinearLayout>
 
-
-    </android.support.constraint.ConstraintLayout>
-
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
