--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -34,13 +34,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/appBar" />
 
+            <TextView
+                android:id="@+id/tv_title_session"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/title_session"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/roboto"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_information" />
+
             <EditText
                 android:id="@+id/et_video_title2"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="24dp"
                 android:background="@drawable/style_input"
                 android:ems="10"
                 android:hint="@string/title_video"
@@ -49,13 +62,15 @@
                 android:textColorHint="@color/white"
                 android:textSize="20sp"
                 app:fontFamily="@font/roboto"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_information" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_title_session"
+                app:layout_constraintStart_toEndOf="@+id/tv_title_session"
+                app:layout_constraintTop_toTopOf="@+id/tv_title_session" />
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/et_video_title2">
 
@@ -78,7 +93,6 @@
                             style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
                             android:layout_marginLeft="32dp"
                             android:layout_marginStart="32dp"
                             android:layout_marginTop="30dp"
@@ -90,13 +104,27 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
+                        <TextView
+                            android:id="@+id/tv_title_grid"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginStart="40dp"
+                            android:layout_marginTop="30dp"
+                            android:text="@string/title_grid"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:fontFamily="@font/roboto"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/tv_information" />
+
                         <EditText
                             android:id="@+id/et_grid_title"
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
                             android:layout_marginLeft="32dp"
                             android:layout_marginStart="32dp"
-                            android:layout_marginTop="0dp"
+                            android:layout_marginTop="20dp"
                             android:background="@drawable/style_input"
                             android:ems="10"
                             android:hint="@string/grid_title"
@@ -114,7 +142,7 @@
                             android:layout_height="match_parent"
                             android:layout_marginLeft="32dp"
                             android:layout_marginStart="32dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="20dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/recycler_view">
 
@@ -203,7 +231,7 @@
                             style="?android:attr/progressBarStyle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:visibility="gone"/>
+                            android:visibility="gone" />
 
                         <Spinner
                             android:id="@+id/spinner_session_infos"
@@ -259,6 +287,7 @@
 
                 </android.support.constraint.ConstraintLayout>
             </LinearLayout>
+
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
