--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -35,8 +35,9 @@
 
             <LinearLayout
                 android:id="@+id/linear_layout_add"
-                android:layout_width="300dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -45,15 +46,15 @@
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
-                android:layout_gravity="center_horizontal">
+                app:layout_constraintTop_toBottomOf="@+id/iv_logo">
 
                 <TextView
                     android:id="@+id/tv_connected"
                     android:layout_width="wrap_content"
-                    android:layout_height="26dp"
+                    android:layout_height="wrap_content"
                     android:text="@string/connected"
                     android:textColor="@color/white"
+                    android:textSize="20sp"
                     app:fontFamily="@font/roboto_bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
@@ -61,16 +62,17 @@
                 <EditText
                     android:id="@+id/et_mail"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
                     android:background="@drawable/style_input"
                     android:ems="10"
                     android:hint="@string/email"
                     android:includeFontPadding="false"
                     android:inputType="textEmailAddress"
+                    android:padding="15dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     app:fontFamily="@font/roboto"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_connected" />
@@ -78,29 +80,31 @@
                 <EditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
                     android:background="@drawable/style_input"
                     android:ems="10"
                     android:fontFamily="@font/roboto"
                     android:hint="@string/password"
                     android:inputType="textPassword"
+                    android:padding="15dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_mail" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingTop="20dp">
 
                     <Button
                         android:id="@+id/tv_lost_password"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:background="@null"
                         android:fontFamily="@font/roboto"
@@ -112,13 +116,15 @@
                         android:id="@+id/btn_connected"
                         style="@style/Widget.AppCompat.Button.Small"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
                         android:background="@drawable/style_button"
                         android:fontFamily="@font/roboto_bold"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
                         android:text="@string/connected_maj"
                         android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:layout_marginLeft="32dp"/>
+                        android:textSize="16sp" />
 
                 </LinearLayout>
 
@@ -127,7 +133,8 @@
             <TextView
                 android:id="@+id/btn_create_account"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -135,10 +142,10 @@
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto"
                 android:gravity="center_vertical"
+                android:paddingTop="10dp"
                 android:text="@string/create_account"
                 android:textColor="@color/white"
-                android:textSize="12sp"
-                android:layout_gravity="center_horizontal"/>
+                android:textSize="12sp" />
 
         </LinearLayout>
     </ScrollView>
